--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <a href = #jelajah class> Jelajahi Website! </a>
                             </button> -->
                         </div>
-                        <img class = "img-fluid w-50 d-none d-sm-block" src = "gambar/pk.svg"alt = "header">
+                        <img class = "img-fluid w-50 d-none d-sm-block" src = "pk.svg"alt = "header">
                     </div>
                 </div>
          </section>
@@ -58,7 +58,7 @@
                 <div class="row text-center g-4">
                     <div class="col-md">
                       <div class="card bg-info text-light" >
-                        <img src="gambar/pk (3).svg" class="card-img-top p-2" alt="pengetahuan kuantitatif">
+                        <img src="pk (3).svg" class="card-img-top p-2" alt="pengetahuan kuantitatif">
                         <div class="card-body">
                           <h5 class="card-title">Pengetahuan Kuantitatif</h5>
                            <p class="card-text"> Kumpulan soal-soal Pengetahuan Kuantitatif </p>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-md">
                         <div class="card bg-info text-light">
-                         <img src="gambar/pk (2).svg" class="card-img-top p-2" alt="...">
+                         <img src="pk (2).svg" class="card-img-top p-2" alt="...">
                          <div class="card-body">
                           <h5 class="card-title">Penalaran Matematika</h5>
                            <p class="card-text">Kumpulan soal-soal Penalaran Matematika</p>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col-md">
                         <div class="card bg-info text-light">
-                         <img src="gambar/pk (1).svg" class="card-img-top p-2" alt="...">
+                         <img src="pk (1).svg" class="card-img-top p-2" alt="...">
                          <div class="card-body">
                           <h5 class="card-title">Tes Intelegensi Umum</h5>
                            <p class="card-text">Kumpulan soal-soal Tes Intelegensi Umum</p>
@@ -134,7 +134,7 @@
                         </li>
                     </div>
                     <div class="col-md">
-                        <img class = "img-fluid w-50 d-none d-sm-block" src = "gambar/contact.svg" alt="contact">
+                        <img class = "img-fluid w-50 d-none d-sm-block" src = "contact.svg" alt="contact">
                     </div>
                 </div>
             </div>
