--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-md">
                         <div class="card bg-info text-light">
-                         <img src="pk  (2).svg" class="card-img-top p-2" alt="...">
+                         <img src="pk  (2).svg" class="card-img-top p-2" alt="Penalaran Matematika">
                          <div class="card-body">
                           <h5 class="card-title">Penalaran Matematika</h5>
                            <p class="card-text">Kumpulan soal-soal Penalaran Matematika</p>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col-md">
                         <div class="card bg-info text-light">
-                         <img src="pk  (1).svg" class="card-img-top p-2" alt="...">
+                         <img src="pk  (1).svg" class="card-img-top p-2" alt="Tes Intelegensi Umum">
                          <div class="card-body">
                           <h5 class="card-title">Tes Intelegensi Umum</h5>
                            <p class="card-text">Kumpulan soal-soal Tes Intelegensi Umum</p>
