--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Pengetahuan Kuantitatif</h5>
                            <p class="card-text"> Kumpulan soal-soal Pengetahuan Kuantitatif </p>
-                           <a href="#" class="btn btn-secondary">Dapatkan Soalnya</a>
+                           <a href="file.html" class="btn btn-secondary">Dapatkan Soalnya</a>
                         </div>
                       </div>
                     </div>
