--- a/file.html
+++ b/file.html
@@ -4,7 +4,7 @@
         <title> PK </title>
     </head>
     <body>
-        <img src = "gambar/Pengetahuan Kuantitatif_page-0001.jpg" alt = "PK1" width = 100%>
-        <img src = "gambar/Pengetahuan Kuantitatif_page-0002.jpg" alt = "PK2" width = 100%> 
+        <img src = "Pengetahuan Kuantitatif_page-0001.jpg" alt = "PK1" width = 100%>
+        <img src = "Pengetahuan Kuantitatif_page-0002.jpg" alt = "PK2" width = 100%> 
     </body>
 </html>
