--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                          <div class="card-body">
                           <h5 class="card-title">Penalaran Matematika</h5>
                            <p class="card-text">Kumpulan soal-soal Penalaran Matematika</p>
-                           <a href="#" class="btn btn-secondary">Dapatkan Soalnya</a>
+                           <a href="file2.html" class="btn btn-secondary">Dapatkan Soalnya</a>
                          </div>
                         </div>
                     </div>
@@ -142,6 +142,7 @@
         <!-- footer -->
          <footer class = "p-5 bg-dark text-white text-center position-relative">
             <!-- <div class="container">
+
                 <p class="lead">Copyright &copy; 2021 MariTravel.com</p>
             </div> -->
 
