--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                          <div class="card-body">
                           <h5 class="card-title">Tes Intelegensi Umum</h5>
                            <p class="card-text">Kumpulan soal-soal Tes Intelegensi Umum</p>
-                           <a href="#" class="btn btn-secondary">Dapatkan Soalnya</a>
+                           <a href="file3.html" class="btn btn-secondary">Dapatkan Soalnya</a>
                          </div>
                         </div>
                     </div>
