--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="d-flex align-items-center">
                         <div>
                             <h1> <span class = "text-info">Nyari </span> website kumpulan soal UTBK dan SKD gratis ?<span class="text-info"> BelajarYuk!</span> solusinya </h1>
-                            <p class = "lead"> Menyediakan kumpulan soal dalam bentuk dokumen yang membantu kamu dalam persiapan masuk Perguruan Tinggi Negeri dan Perguruan Tinggi Kedinasan. </p>
+                            <p class = "lead"> Menyediakan kumpulan soal yang membantu kamu dalam persiapan masuk Perguruan Tinggi Negeri dan Perguruan Tinggi Kedinasan. </p>
                             <!-- <button class = "btn btn-primary btn-md">
                                 <a href = #jelajah class> Jelajahi Website! </a>
                             </button> -->
